[tool.poetry]
name = "wsstreamer"
version = "0.1.0"
description = "Python Project to Learn Streaming Data via Sockets"
authors = ["Jaya Kasa <kasa288@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-socketio = {version = "^5.0.4", extras = ["asyncio_client"]}
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
eventlet = "^0.30.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
